Holy Shit its finally fixed

--- a/JamesMoonNoahConveryAssgt/GroanRules.resx
+++ b/JamesMoonNoahConveryAssgt/GroanRules.resx
@@ -65,6 +65,7 @@ Players have a cumulative score and a running score
 The running score is their score on their turn while cumulative is overall
 If you roll a single one on any dice you lose the running score and pass your turn
 If you roll snake eyes (two ones) then you lose both cumulative and running score
-Players can continue to roll until they choose to pass or get a one</value>
+Players can continue to roll until they choose to pass or get a one
+</value>
   </data>
 </root>
